# qgravnet

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: qgravnet_legacy.py  qgravnet_modules.py
qgravnet/: __init__.py  globalmaxreduce1d.py  qdistanceweighting.py  qexponential.py  qglobalaveragereduce1d.py  qglobalexchange.py  qgravnet.py  qnearestneighbour.py
test/: globalmaxreduce1d_test.py  qexponential_test.py  qglobalaveragereduce1d_test.py  qglobalexchange_test.py  qnearestneighbour_test.py
